<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PumpTrainer</string>
    <string name="action_settings">Settings</string>
    
    <string name="hang">Hang</string>
    <string name="rest">Rest</string>
    <string name="rep">Rep</string>
    <string name="recovery">Recovery</string>
    <string name="sets">Sets</string>
    <string name="notes">Notes</string>
    
    <string name="start">Start</string>
    <string name="pause">Pause</string>

    <string name="time_colon"> : </string>
    <string name="dismiss">Cancel</string>
    <string name="save">Log</string>
    
    <string name="no_workouts">No Workouts Logged. \n What are you waiting for?!</string>
	
    <string name="new_wo">New</string>
    <string name="see_log">Log</string>
    
    <string name="welcome">Thanks for choosing PumpTrainer to get your pump on. \n </string>
</resources>
