<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="#00000000"
    >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/action_text_padding"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/dialog_font_size"
            android:text="@string/hang"
            />
        <TextView 
            android:id="@+id/dialog_hang_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/dialog_font_size"
            />
     </RelativeLayout>
     
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/action_text_padding"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/dialog_font_size"
            android:text="@string/rest"
            />
        <TextView 
            android:id="@+id/dialog_rest_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/dialog_font_size"
            />
     </RelativeLayout>
     
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/action_text_padding"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/dialog_font_size"
            android:text="@string/rep"
            />
        <TextView 
            android:id="@+id/dialog_rep_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/dialog_font_size"
            />
     </RelativeLayout>
     
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/action_text_padding"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/dialog_font_size"
            android:text="@string/recovery"
            />
        <TextView 
            android:id="@+id/dialog_rec_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/dialog_font_size"
            />
     </RelativeLayout>
     
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/action_text_padding"
        >
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/dialog_font_size"
            android:text="@string/sets"
            />
        <TextView 
            android:id="@+id/dialog_sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/dialog_font_size"
            />
     </RelativeLayout>

    <EditText
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/dialog_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine" 
        android:hint="Notes about this PUMP.">

        <requestFocus />
    </EditText>
    
   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/action_text_padding"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/dismiss_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/dismiss"
            android:textSize="@dimen/home_font_size" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/save"
            android:textSize="@dimen/home_font_size" />
        
     </LinearLayout>

</LinearLayout>
