<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/black_75"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    >
    
    <TextView 
        android:id="@+id/wo_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/wo_date_font_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/wo_margin"
        />
    
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_wo_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/delete_btn"/>
    
    <LinearLayout 
        android:id="@+id/wo_all_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wo_date"
        android:orientation="horizontal">
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginRight="@dimen/wo_margin"
	        >
	        <TextView 
		        android:gravity="center"
		        android:layout_width="@dimen/wo_width"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/white"
		        android:textSize="@dimen/wo_value_font_size"
		        android:id="@+id/wo_hang_val"
	        />
	    	<TextView 
		        android:gravity="center"
		        android:layout_width="@dimen/wo_width"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/white"
		        android:textSize="@dimen/wo_title_font_size"
		        android:text="@string/hang"
	        />
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginRight="@dimen/wo_margin"
	        >
	        <TextView 
		        android:gravity="center"
		        android:layout_width="@dimen/wo_width"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/white"
		        android:textSize="@dimen/wo_value_font_size"
		        android:id="@+id/wo_rest_val"
	        />
	    	<TextView 
		        android:gravity="center"
		        android:layout_width="@dimen/wo_width"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/white"
		        android:textSize="@dimen/wo_title_font_size"
		        android:text="@string/rest"
	        />
	    	
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginRight="@dimen/wo_margin"
	        >
	        <TextView 
		        android:gravity="center"
		        android:layout_width="@dimen/wo_width"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/white"
		        android:textSize="@dimen/wo_value_font_size"
		        android:id="@+id/wo_rep_val"
	        />
	    	<TextView 
		        android:gravity="center"
		        android:layout_width="@dimen/wo_width"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/white"
		        android:textSize="@dimen/wo_title_font_size"
		        android:text="@string/rep"
	        />
	    	
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_marginRight="@dimen/wo_margin"
	        >
	        <TextView 
		        android:gravity="center"
		        android:layout_width="@dimen/wo_width"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/white"
		        android:textSize="@dimen/wo_value_font_size"
		        android:id="@+id/wo_rec_val"
	        />
	    	<TextView 
		        android:gravity="center"
		        android:layout_width="@dimen/wo_width"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/white"
		        android:textSize="@dimen/wo_title_font_size"
		        android:text="@string/recovery"
	        />
	    	
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        >
	        <TextView 
		        android:gravity="center"
		        android:layout_width="@dimen/wo_width"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/white"
		        android:textSize="@dimen/wo_value_font_size"
		        android:id="@+id/wo_set_val"
	        />
	    	<TextView 
		        android:gravity="center"
		        android:layout_width="@dimen/wo_width"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/white"
		        android:textSize="@dimen/wo_title_font_size"
		        android:text="@string/sets"
	        />
	    	
	    </LinearLayout>
	    
    </LinearLayout>
    
    <TextView 
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="@dimen/wo_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/notes"
        android:textColor="@android:color/white"
        android:layout_below="@id/wo_all_values"
        android:color="@android:color/white"
        android:id="@+id/wo_notes_title"/>
    
    <TextView 
        android:textColor="@android:color/white"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/wo_notes"
        android:textSize="@dimen/wo_value_font_size"
        android:color="@android:color/white"
        android:layout_below="@id/wo_notes_title"
	/>

</RelativeLayout>
